fix(test): use explicit MockMvcRequestBuilders, remove unused Collections import (#359)